# baniguru-desktop

./: .env.example  .gitattributes  .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: meilisearch-x86_64-unknown-linux-gnu
src-tauri/icons/: icon.icns
src-tauri/src/: audio_bus.rs  commands.rs  main.rs  p2p_audio_sender.rs  server.rs  settings.rs  soniox.rs  webrtc.rs
src-tauri/static/: overlay.js  style.css
src-tauri/templates/: overlay.html  settings.html
src/components/AnnouncementDisplay/: index.tsx
src/components/AnnouncementPanel/: index.tsx
src/components/BaniDisplay/: BaniGroupDisplay.tsx  index.tsx
src/components/BaniPanel/: index.tsx
src/components/RecentPanel/: index.tsx
src/components/SearchPanel/: SearchList.tsx  index.tsx
src/components/SettingPanel/: index.tsx
src/components/ShabadDisplay/: index.tsx
src/components/ShabadPanel/: SonioxSTTPunjabi.tsx  index.tsx  usePanktiMatch.ts  (+1 more)
src/hooks/: usePanktiSearch.ts
src/models/: Pankti.ts  Pankti.tsx
src/state/: ActionTypes.tsx
src/ui/: FormatAndBreakText.tsx  FormatGurmukhiText.tsx  SettingInput.tsx  TabIcons.tsx
src/utils/: DB.tsx  TauriCommands.ts  apiClient.ts  autoPilotHelpers.ts  env.ts  gurbaniSearch.ts  matchFinder.ts  meili.ts  shabadUtil.ts  useAutoHideCursor.ts  useBaniPilot.tsx  useFitTextStable.tsx  useFitTextToTwoLines.ts  useGurbaniSearch.ts  useMeilisearch.ts  useShabadNavigation.ts  useShabadSearch.ts  useTheme.ts  wavesurferUtils.ts
(+11 files in other folders)
