[package]
name = "baniguru"
version = "0.0.2"
description = "Gurbani explore"
authors = ["BaniGuru.com"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
warp = "0.3"
tera = "1.19.1"
local-ip-address = "0.5"
include_dir = "0.7"
mime_guess = "2.0"

# microphone
cpal = "0.17.3"

# websocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
base64 = "0.21"
bytemuck = "1"
crossbeam-channel = "0.5"
# rubato = "0.13"
rubato = "0.16"
futures = "0.3"
url = "2"

# WebRTC audio
webrtc = "0.13"

# Opus encoder
opus = "0.3"

# Error handling
anyhow = "1"

# Serde for JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP requests
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async ecosystem
tokio = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3.30"
tauri-plugin-store = "2.3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
